# conv_bit

./: Cargo.toml  README.md
src/: lib.rs  number.rs
tests/: conv_tests.rs  number_tests.rs
