[package]
name = "conv_bit"
version = "0.2.0"
edition = "2024"
description = "컴퓨터 구조 학습을 위한 숫자 진법 변환 라이브러리"
authors = ["Jae-Hwan Chung <dialektike@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/example/conv_bit"
readme = "README.md"
keywords = ["binary", "bit", "conversion", "number"]
categories = ["command-line-utilities", "algorithms", "encoding"]

[dependencies]
